@@ -1,5 +1,17 @@
 2012-11-21  Allan Sandfeld Jensen  <allan.jensen@digia.com>
 
+        Position in QWebHitTestResult does not match documentation
+        https://bugs.webkit.org/show_bug.cgi?id=102909
+
+        Reviewed by Simon Hausmann.
+
+        Correct documentation and simplify using the new innerNodeFrame method.
+
+        * Api/qwebframe.cpp:
+        (QWebHitTestResultPrivate::QWebHitTestResultPrivate):
+
+2012-11-21  Allan Sandfeld Jensen  <allan.jensen@digia.com>
+
         Disambiguate innerNodeFramePoint and mainFramePoint
         https://bugs.webkit.org/show_bug.cgi?id=98139
 
